fix koorist picture on mobiles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -758,7 +758,7 @@ body {
         height: 15rem; } }
     @media screen and (max-width: 500px) {
       .section-header__img {
-        background-image: url("../img/optimized-noorus2.jpg"); } }
+        background-image: url("../img/Optimized-noorus2.jpg"); } }
   .section-header__text-box {
     flex: 1 1 50rem; }
 
