--- a/public/sass/pages/_koorist.scss
+++ b/public/sass/pages/_koorist.scss
@@ -44,7 +44,7 @@
       height: 15rem;
     }
     @media screen and (max-width: 500px) {
-      background-image: url("../img/optimized-noorus2.jpg");
+      background-image: url("../img/Optimized-noorus2.jpg");
     }
   }
 
